--- a/texFiles/1_intro.tex
+++ b/texFiles/1_intro.tex
@@ -91,7 +91,12 @@ index gradient and are identified as radio relic created from a merger.\par
 	\caption{Configuration of El Gordo showing approximate overlaid of dark
 		matter distribution in blue, and X-ray luminosity in red. The cross
 		markers show the position of the northwest (NW) and southeast(SE) dark
-		matter density peaks, and the center of mass (CM) location respectively.   \label{fig:config}}
+		matter density peaks, and the center of mass (CM) location respectively.   
+		The dashed white line indicates the approximate location of the northwest (NW)
+		radio relic.
+		(Image Credit: NASA, ESA and \citealt{Jee13} - not sure if I am citing
+		the agencies in the appropriate format). 
+		\label{fig:config}}
 \end{figure}
 El Gordo is one of small sample of galaxy clusters ($\sim 50$) that have
 been associated with a radio relic. (This paragraph needs a lot more
