trying to finish the summary section and the abstract

--- a/texFiles/1_intro.tex
+++ b/texFiles/1_intro.tex
@@ -92,8 +92,8 @@ index gradient and are identified as radio relic created from a merger.\par
 		matter distribution in blue, and X-ray luminosity in red. The cross
 		markers show the position of the northwest (NW) and southeast(SE) dark
 		matter density peaks, and the center of mass (CM) location respectively.   
-		The dashed white line indicates the approximate location of the northwest (NW)
-		radio relic.
+		The dashed white line indicates the approximate location of the northwest 
+		radio relic (NW relic).
 		(Image Credit: NASA, ESA and \citealt{Jee13} - not sure if I am citing
 		the agencies in the appropriate format). 
 		\label{fig:config}}
