--- a/texFiles/output_table.tex
+++ b/texFiles/output_table.tex
@@ -5,12 +5,12 @@
 \begin{tabularx}{\textwidth}{@{\extracolsep{\fill}}lccccccccc@{}}
 \hline
 \hline
-&&&&Default priors & & & & Default + position priors  \\ 
+&&&&Default priors & & & & Default + polarization priors  \\ 
 \cmidrule{4-6} \cmidrule{8-10} 
 Variables & Units && Location & 68$\%$ CI $^{\dagger}$ &95$\%$ CI && Location & 68$\%$ CI  & 95$\%$ CI \\ 
 \hline 
 $\alpha$ &(degree)&&43&19-69&6-80&&21&10-30&3-34\\
-$d_{proj}$ &Mpc&&0.74&0.74-0.75&0.73-0.76&&0.74&0.74-0.75&0.73-0.76\\
+%$d_{proj}$ &Mpc&&0.74&0.74-0.75&0.73-0.76&&0.74&0.74-0.75&0.73-0.76\\
 $d_{max}$ &Mpc&&1.2&0.9-2.2&0.77-4.6&&0.93&0.81-1.2&0.75-1.9\\
 $d_{3D}$ &Mpc&&1&0.79-2.1&0.75-4.3&&0.8&0.76-0.88&0.74-0.91\\
 $TSC_0$&Gyr&&0.61&0.4-0.95&0.26-2.4&&0.46&0.3-0.55&0.21-0.64\\
