fixed the abstract

--- a/texFiles/ElGordo1.tex
+++ b/texFiles/ElGordo1.tex
@@ -25,7 +25,35 @@ Leiden, Netherlands\\}
 \pubyear{1988} \maketitle \label{firstpage}
 %-----------------------------------------------------------------------
 \begin{abstract} 
-    \input{abstract}
+Merging galaxy clusters with radio relics provide rare insights to the merger
+dynamics as the relics are created by the violent merger process. 
+We demonstrate one of the first uses of the
+properties of the radio relic
+to reduce the uncertainties of the dynamical variables 
+and 3D configurations of a cluster merger, ACT-CL J0102-4915, El Gordo. 
+From the double radio relic observation and X-ray wake morphology, 
+it is believed that El Gordo is observed shortly after the first
+core-passage of the subclusters.
+At a redshift of 0.87, El Gordo (M$_{200c} = 
+2.75\times10^{15} \pm^{7.4}_{1.5}$ M$_{\sun}$) is one of the most massive
+clusters discovered in the early universe. The two subclusters of El
+Gordo has a mass ratio of around 2:1. 
+The X-ray and weak-lensing data of El Gordo show an offset of X kpc between
+the intercluster gas and the dark matter (DM) at $\sim$4 $\sigma$ level.
+All these features of El Gordo make it part of a valuable class of
+dissociative mergers that can probe the self-interaction of dark matter.
+We employ a Monte Carlo simulation to investigate the three-dimensional (3D)
+configuration and dynamics of El Gordo and provide a summary of the probability
+density functions of the inferred variables. By making use the polarization
+fraction of the radio relic, we are able to constrain the estimate of the
+angle between the sky and the merger axis to be $\alpha = 21\degree \pm $.
+The 3D merger speed of El Gordo was found to be $\sim 2400 ~\kilo\meter~
+\second^{-1}$. We put our estimates of the time-since-collision into
+context and showed that if the time-averaged shock velocities $\gtrsim 2800~
+\kilo\meter~\second^{-1}$ in the center of mass frame, the two subclusters are more likely to be moving
+away from each other than moving towards each other. 
+Finally, we compare our simulation results with other merging clusters and
+show that El Gordo has very similar dynamical properties as the Bullet Cluster
 \end{abstract}
 %-----------------------------------------------------------------------
 \begin{keywords}
@@ -604,8 +632,8 @@ inferred the upper bound of the relative collisional velocity from the Mach
 number of the NW radio relic, giving an estimate of $2500
 \pm^{400}_{300}\kilo\meter~\second^{-1}$. Since the radio relic leads the
 NW subcluster, the shock velocity can be viewed as an upper bound the
-relative velocities of the subcluster at collision. Magnitude of $v_{3D}$
-drops as the subclusters climb out of the gravitational potential of each
+relative velocities of the subcluster at collision. Magnitude of the
+relative $v_{3D}$ of the subclusters drops as the subclusters climb out of the gravitational potential of each
 other, and reduced to $v_{3D}(t_{obs}) = 940~\kilo\meter~\second^{-1}$ at
 the time of observation. 
 %Our estimate of $v_{3D}(t_{col})$ is
@@ -619,9 +647,9 @@ the time of observation.
 %-----------------------------------------------------------------------
 
 \subsection{Time-since-collision (TSC) and the merger scenario}
-
-TO BE REPLACED BY A PARAGRAPH DENOTING WHAT ARE THE RANGE OF SHOCK WAVE
-SPEEDS ARE NEEDED TO BREAK THE DEGENERACIES
+(PLEASE SKIP THIS SECTION, I need to amend the figure by replacing the
+shock speed with the actual estimates from Lindner et al. instead of using
+our simulated speed)
 Comparison of the estimate of the location of the radio relic in the
 outgoing and returning scenario favors the returning scenario.
 The simulation gives two estimates for
@@ -843,30 +871,33 @@ merging clusters and this problem presents an interesting direction for investig
  
 This work provides insight to the merger dynamics and
 configuration of El Gordo as a basis for further studies.
-For example, tests for
+Tests for
 signs of self-interaction of DM in El Gordo  can be done
 by comparing the offset between the member galaxies and the
 DM distribution of the subclusters. By understanding the merging scenario,
 we can infer if the observed galaxy-DM offset are in the expected
 direction such that the collisionless galaxies lead the DM subhalos along
-the direction of motion. 
-
-In addition, we showed that understanding individual mergers can be
-improved by a better understanding of the physical constraints of the
-merger shocks from cosmological simulations. Important pending questions include: 
-What are the typical velocities of the shockwave that corresponds to the
-radio relic in the	center of mass frame of the cluster? What physical properties of the DM subclusters would correlate the best with the time-evolution of the velocity of the shockwave?  What are the duration after merger for which radio relics are
-observable in terms of the merger oscillation time-scales?\\ 
+the direction of motion. In addition, our work has allowed us to examine
+what information would be needed to better understanding of the merger
+dynamics. Important pending questions concerning the radio relic and the
+merger  include:  What are the typical velocities of the shockwave that
+corresponds to the radio relic in the	center of mass frame of the cluster?
+What physical properties of the DM subclusters would correlate the best with the
+time-evolution of the velocity of the shockwave?  What are the duration
+after merger for which radio relics are observable in terms of the merger
+oscillation time-scales? \par 
 
 This paper presents one of the first examples of using the observed radio
 relic emission to constrain cluster merger properties.
 As a summary, our simulation of El Gordo:
-1) favors the estimate of a small projection angle  
-2) shows a low observed radial velocity and collisional velocity of El Gordo given its high
-mass  
-3) predicts an outgoing scenario if the time-averaged merger shock velocity
-is $> 2800~\kilo \meter~\second^{-1}$ between the collision and the
-observation 
+\begin{enumerate}
+\item favors the estimate of a small projection angle \\ 
+\item shows a low observed radial velocity and collisional velocity of El
+	Gordo given its high mass \\ 
+\item predicts an outgoing scenario if the time-averaged merger shock
+	velocity in the center of mass frame is $> 2800~\kilo \meter~\second^{-1}$ between the collision and the
+observation \ 
+\end{enumerate}
 
 \section{ACKNOWLEDGEMENTS}
 We thank Franco Vazza, Marcus Br\"{u}ggen and Surajit Paul for sharing
