--- a/texFiles/ElGordo1.tex
+++ b/texFiles/ElGordo1.tex
@@ -862,17 +862,19 @@ galaxies that represent the underlying velocities of the subclusters. Traditiona
 may be treated as a (statistical) clustering problem with well known
 methods such as normal mixture model. However, our setting is complicated
 by the fact that each of the observed redshifts of galaxies is an unknown combination of cosmological redshift
-and redshift due to peculiar motion along the line-of-sight. Existing
+and redshift due to peculiar motion along the line-of-sight. Our study
+only make use of a limited galaxies with spectroscopic members. This could
+cause selection bias and incompleteness due to limitations of the 
+of spectroscopic targets. Existing
 literature and tests mostly focus on detecting substructures in galaxy
 clusters through non-Gaussianity of the velocity dispersion (Dressler,
 Einasto). Few extensive studies have focused on finding out the uncertainties
 associated with this clustering procedure for inferring the dynamics of
-merging clusters and this problem presents an interesting direction for investigation in the future.   
+merging clusters. This problem presents an interesting direction for investigation in the future.   
  
-This work provides insight to the merger dynamics and
-configuration of El Gordo as a basis for further studies.
-Tests for
-signs of self-interaction of DM in El Gordo  can be done
+Despite the limitations and simplifying assumptions, this work provides
+insight to the merger dynamics and configuration of El Gordo as a basis for further studies.
+Tests for signs of self-interaction of DM in El Gordo  can be done
 by comparing the offset between the member galaxies and the
 DM distribution of the subclusters. By understanding the merging scenario,
 we can infer if the observed galaxy-DM offset are in the expected
@@ -880,12 +882,14 @@ direction such that the collisionless galaxies lead the DM subhalos along
 the direction of motion. In addition, our work has allowed us to examine
 what information would be needed to better understanding of the merger
 dynamics. Important pending questions concerning the radio relic and the
-merger  include:  What are the typical velocities of the shockwave that
+merger  include:  What are the typical propagation velocities of the shockwave that
 corresponds to the radio relic in the	center of mass frame of the cluster?
 What physical properties of the DM subclusters would correlate the best with the
-time-evolution of the velocity of the shockwave?  What are the duration
+time-evolution of the propagation velocity of the shockwave?  What are the duration
 after merger for which radio relics are observable in terms of the merger
-oscillation time-scales? \par 
+oscillation time-scales? Answers to these questions may become available as
+more analysis tools get developed to extract observables from cosmological
+and hydrodynamical after overcoming resolution issues.\par 
 
 This paper presents one of the first examples of using the observed radio
 relic emission to constrain cluster merger properties.
@@ -896,7 +900,7 @@ As a summary, our simulation of El Gordo:
 	Gordo given its high mass \\ 
 \item predicts an outgoing scenario if the time-averaged merger shock
 	velocity in the center of mass frame is $> 2800~\kilo \meter~\second^{-1}$ between the collision and the
-observation \ 
+observation. 
 \end{enumerate}
 
 \section{ACKNOWLEDGEMENTS}
