--- a/texFiles/ElGordo1.tex
+++ b/texFiles/ElGordo1.tex
@@ -887,13 +887,13 @@ corresponds to the radio relic in the	center of mass frame of the cluster?
 What physical properties of the DM subclusters would correlate the best with the
 time-evolution of the propagation velocity of the shockwave?  What are the duration
 after merger for which radio relics are observable in terms of the merger
-oscillation time-scales? Answers to these questions may become available as
-more analysis tools get developed to extract observables from cosmological
-and hydrodynamical after overcoming resolution issues.\par 
+oscillation time-scales? We urge simulators working on radio relic
+simulations to help come up with the answers that would be directly
+comparable with observed data. \par 
 
-This paper presents one of the first examples of using the observed radio
-relic emission to constrain cluster merger properties.
-As a summary, our simulation of El Gordo:
+As a summary, this paper presents one of the first examples of using the
+observed radio relic emission to constrain cluster merger properties, the
+results
 \begin{enumerate}
 \item favors the estimate of a small projection angle \\ 
 \item shows a low observed radial velocity and collisional velocity of El
